# git-analyzer

./: Cargo.toml  HOMEBREW_SETUP.md  README.md
.github/workflows/: release.yml
Formula/: git-analyzer.rb
src/: main.rs
