[package]
name = "git-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Alex Filatov <alex@alexfilatov.com>"]
description = "A command-line tool for Git repository analysis"
repository = "https://github.com/alexfilatov/git-analyzer"
license = "MIT"
keywords = ["git", "analysis", "cli", "repository", "statistics"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
git2 = "0.19"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tempfile = "3.8"
url = "2.5"
